<resources>
    <string name="app_name">Sjtek</string>

    <string name="service_action_music_toggle" translatable="false">nl.sjtek.client.android.ACTION_MUSIC_TOGGLE</string>
    <string name="service_action_music_next" translatable="false">nl.sjtek.client.android.ACTION_MUSIC_NEXT</string>
    <string name="service_action_switch" translatable="false">nl.sjtek.client.android.ACTION_SWITCH</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_shuffle">Shuffle queue</string>
    <string name="action_clear">Clear queue</string>
    <string name="action_start">Start music</string>

    <string name="nav_title_services">Sjtek services</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_music">Music</string>
    <string name="nav_sonarr">Sonarr</string>
    <string name="nav_transmission">Transmission</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_title_external_apps">External apps</string>
    <string name="nav_hue">Hue</string>
    <string name="nav_nap">Nap</string>

    <string name="toolbar_user">Hello %1$s%2$s</string>

    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_error">
        Something went wrong while signing in. Check your username and password.\n\n
        Http code: %1$s\n
        Message: %2$s
    </string>

    <string name="card_coffee_title">Coffee</string>
    <string name="card_coffee_heated_true">Heated</string>
    <string name="card_coffee_heated_false">Cold</string>

    <string name="card_lights_title">Lights</string>
    <string name="card_lights_switch1">Living room</string>
    <string name="card_lights_switch2">Kitchen</string>
    <string name="card_lights_switch3">LED strip</string>
    <string name="card_lights_switch4">Desk light</string>

    <string name="card_meal_title">Dinner</string>
    <string name="card_meal_default" translatable="false">Bluffer</string>
    <string name="card_meal_refresh" translatable="false">pls no</string>

    <string name="card_music_title">Music livingroom</string>

    <string name="card_sonarr_title">Sonarr</string>
    <string name="card_sonarr_upcoming_title">Upcoming</string>
    <string name="card_sonarr_disk_title">Disk usage</string>
    <string name="card_sonarr_disk_root" translatable="false">root</string>
    <string name="card_sonarr_disk_data" translatable="false">data</string>

    <string name="card_temperature_title">Temperature</string>
    <string name="card_temperature_inside">Inside</string>
    <string name="card_temperature_outside">Outside</string>

    <string name="dialog_music">Start playlist</string>

    <string name="dialog_led_title">LED strip</string>
    <string name="dialog_led_done">Apply</string>
    <string name="dialog_led_cancel">Cancel</string>

    <string name="pref_title">Settings</string>

    <string name="pref_cat_account">Account</string>
    <string name="pref_title_sign_in">Sign in</string>
    <string name="pref_title_sign_out">Sign out</string>
    <string name="pref_summary_signed_in">Currently signed in as %s.</string>
    <string name="pref_key_account">pref_key_account</string>

    <string name="pref_cat_notification">Notification</string>
    <string name="pref_summary_notification_enable">Enable the shortcuts notification.</string>
    <string name="pref_title_notification_enable">Enable</string>
    <string name="pref_key_notification_enable">pref_key_notification_enable</string>

    <string name="pref_cat_widget">Widget</string>
    <string name="pref_summary_widget_transparent">Make the widget background transparent.</string>
    <string name="pref_title_widget_transparent">Transparent background</string>
    <string name="pref_key_widget_transparent">pref_key_widget_transparent</string>

    <string name="shortcut_toggle">Toggle all</string>
    <string name="shortcut_music">Music</string>
    <string name="shortcut_hue">Hue</string>
    <string name="shortcut_nap">Nap</string>

    <string name="music_clear_queue">Clear queue</string>
    <string name="music_shuffle">Shuffle queue</string>
    <string name="music_start_playlist">Start playlist</string>
    <string name="screen_settings">Screen settings</string>
    <string name="toggle_night_mode">Toggle night mode</string>
    <string name="night_mode_enabled">Night mode enabled</string>
    <string name="card_lights_switch5">Hallway</string>
    <string name="card_lights_switch7">Stairs</string>

    <string name="notification_channel_name">WiFi notification</string>
    <string name="notification_channel_description">Show a notification when on the home WiFi network.</string>
</resources>
