<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ActivityMain">
    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_shuffle_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_shuffle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_start"
        android:icon="@drawable/ic_library_music_white_24dp"
        android:orderInCategory="300"
        android:title="@string/action_start"
        app:showAsAction="ifRoom" />
</menu>